--- a/src/main/webapp/app/entities/baby/baby-profile/update/baby-profile-update.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/update/baby-profile-update.component.html
@@ -106,7 +106,7 @@
           <input type="checkbox" class="form-check" name="main" id="field_main" data-cy="main" formControlName="main" />
         </div>
 
-        <div class="form-group">
+        <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-control-label" jhiTranslate="gatewayApp.babyBabyProfile.userId" for="field_userId">User Id</label>
           <input type="text" class="form-control" name="userId" id="field_userId" data-cy="userId" formControlName="userId" />
           <div *ngIf="editForm.get('userId')!.invalid && (editForm.get('userId')!.dirty || editForm.get('userId')!.touched)">
