--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,64 +1,90 @@
 <div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
+  <div class="col-md-3 d-none d-md-inline">
+    <span class="lollipop img-fluid rounded"></span>
   </div>
   <div class="col-md-9">
-    <h1 class="display-4"><span jhiTranslate="home.title">Welcome, Java Hipster!</span> (Gateway)</h1>
+    <h1 class="display-5" *ngIf="account === null"><span jhiTranslate="home.title">Welcome, Java Hipster!</span></h1>
+    <h1 class="display-5" *ngIf="account !== null">
+      <span id="home-logged-message" jhiTranslate="home.titleWithName" [translateValues]="{ username: account.firstName ?? account.login }"
+        >Welcome, Java Hipster!</span
+      >
+    </h1>
 
     <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
     <div [ngSwitch]="account !== null">
-      <div class="alert alert-success" *ngSwitchCase="true">
-        <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }">
-          You are logged in as user "{{ account.login }}".
-        </span>
-      </div>
       <div *ngSwitchCase="true">
-        <div class="row">
-          <div class="col-7">
-            <h4
-              jhiTranslate="home.logged.nap.today"
-              class="mt-1 d-none d-md-inline"
-              [translateValues]="{ date: currentDate | date: 'longDate' }"
-            >
-              Naps hours for today - 17/09/21:
-            </h4>
-            <h4 jhiTranslate="home.logged.nap.todayMobile" class="mt-1 d-sm-none" [translateValues]="{ date: currentDate | date: 'MMM d' }">
-              Naps hours for 17/09/21:
-            </h4>
-          </div>
-          <div class="col-5 col-md-4 text-right">
-            <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 mb-1 text-white">
-              <fa-icon icon="plus"></fa-icon>
-              <span jhiTranslate="home.logged.nap.addnap"> Nap </span>
-            </a>
+        <div [hidden]="babyProfile.name">
+          <div class="row">
+            <div class="col-12 text-center">
+              <div class="alert alert-info">
+                <span jhiTranslate="home.logged.babyProfile.nobabyProfile"> The first step is create an baby profile </span>
+              </div>
+            </div>
+            <div class="col-12 text-center">
+              <a [routerLink]="['/baby-profile/new']" class="btn btn-primary m-0 mb-1 text-white">
+                <fa-icon icon="plus"></fa-icon>
+                <span jhiTranslate="home.logged.babyProfile.addbabyProfile"> Baby Profile </span>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-11 col-xs-12">
-            <ngb-progressbar
-              [max]="24"
-              [value]="napToday.sleepHours"
-              [striped]="true"
-              [type]="napToday.progress"
-              [hidden]="!napToday.sleepHours"
-            >
-              <span
-                *ngIf="napToday.sleepHours"
-                jhiTranslate="home.logged.nap.progressbarTitle"
-                [translateValues]="{ sleepHours: napToday.sleepHours, goal: napToday.sleepHoursGoal }"
+        <div [hidden]="!babyProfile.name">
+          <div class="row">
+            <div class="col-8">
+              <h4
+                jhiTranslate="home.logged.nap.today"
+                class="mt-1 d-none d-md-inline"
+                [translateValues]="{ date: currentDate | date: 'longDate' }"
               >
-                {{ napToday.sleepHours }} / Goal: {{ napToday.sleepHoursGoal }}
-              </span>
-            </ngb-progressbar>
-            <div class="alert alert-warning" [hidden]="napToday.sleepHours">
-              <span jhiTranslate="home.logged.nap.noprogress" [translateValues]="{ name: babyProfile.name }">
-                No points yet this week, better get moving!</span
+                Naps hours for today - 17/09/21:
+              </h4>
+              <h4
+                jhiTranslate="home.logged.nap.todayMobile"
+                class="mt-1 d-sm-none"
+                [translateValues]="{ date: currentDate | date: 'MMM d' }"
               >
+                Naps hours for 17/09/21:
+              </h4>
+            </div>
+            <div class="col-4 col-md-4 text-right">
+              <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 mb-1 text-white">
+                <fa-icon icon="plus"></fa-icon>
+                <span jhiTranslate="home.logged.nap.addnap"> Nap </span>
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 col-xs-12">
+              <ngb-progressbar
+                [max]="24"
+                [value]="napToday.sleepHours"
+                [striped]="true"
+                [type]="napToday.progress"
+                [hidden]="!napToday.sleepHours"
+              >
+                <span
+                  *ngIf="napToday.sleepHours"
+                  jhiTranslate="home.logged.nap.progressbarTitle"
+                  [translateValues]="{ sleepHours: napToday.sleepHours, goal: napToday.sleepHoursGoal }"
+                >
+                  {{ napToday.sleepHours }} / Goal: {{ napToday.sleepHoursGoal }}
+                </span>
+              </ngb-progressbar>
+              <div class="alert alert-warning" [hidden]="napToday.sleepHours">
+                <span jhiTranslate="home.logged.nap.noprogress" [translateValues]="{ name: babyProfile.name }">
+                  Did {{ babyProfile.name }} sleep today?</span
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- <div class="alert alert-success" *ngSwitchCase="true">
+        <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }">
+          You are logged in as user "{{ account.login }}".
+        </span>
+      </div> -->
 
       <div class="alert alert-warning" *ngSwitchCase="false">
         <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
@@ -75,7 +101,7 @@
       </div>
     </div>
 
-    <p jhiTranslate="home.question">If you have any question on JHipster:</p>
+    <!-- <p jhiTranslate="home.question">If you have any question on JHipster:</p>
 
     <ul>
       <li>
@@ -118,6 +144,6 @@
       <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github"
         >GitHub</a
       >!
-    </p>
+    </p> -->
   </div>
 </div>
