Add support for timezone parameter and solve error handler - There is no need for error handler, because jhipster do this by component

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -12,6 +12,10 @@
 
     <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
+    <jhi-alert-error></jhi-alert-error>
+
+    <jhi-alert></jhi-alert>
+
     <div [ngSwitch]="account !== null">
       <div *ngSwitchCase="true">
         <div [hidden]="babyProfile.name">
