--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -207,6 +207,7 @@ body {
 }
 .jh-card {
   border: none !important;
+  padding-bottom: 35px;
 }
 .footer {
   bottom: 0;
@@ -216,7 +217,7 @@ body {
   border-top: 1px solid silver;
   position: fixed;
   width: 100%;
-  padding: 10px;
+  padding: 1px;
   padding-bottom: 0;
   text-align: center;
   z-index: 2;
