Fix when cellphone on landscape the date nest to +Nap desappear

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -48,8 +48,8 @@
             <div class="col-7">
               <h4
                 jhiTranslate="home.logged.nap.today"
-                class="mt-1 d-none d-md-inline"
-                [translateValues]="{ date: currentDate | date: 'longDate' }"
+                class="mt-1 d-none d-sm-inline"
+                [translateValues]="{ date: currentDate | date: 'mediumDate' }"
               >
                 Naps hours for today - 17/09/21:
               </h4>
