--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,14 +3,24 @@
     <span class="lollipop img-fluid rounded"></span>
   </div>
   <div class="col-md-9">
-    <h1 class="display-4" *ngIf="account === null"><span jhiTranslate="home.title">Welcome, Java Hipster!</span></h1>
-    <h1 *ngIf="account !== null">
-      <span id="home-logged-message" jhiTranslate="home.titleWithName" [translateValues]="{ username: account.firstName ?? account.login }"
-        >Welcome, Java Hipster!</span
-      >
-    </h1>
-
-    <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
+    <div *ngIf="account === null">
+      <h1 class="display-5 d-none d-sm-block"><span jhiTranslate="home.title">Welcome, Java Hipster!</span></h1>
+      <p class="lead d-none d-sm-inline" jhiTranslate="home.subtitle">This is your homepage</p>
+      <h5 class="d-sm-none"><span jhiTranslate="home.title">Welcome, Java Hipster!</span></h5>
+      <p class="d-sm-none" jhiTranslate="home.subtitle">This is your homepage</p>
+    </div>
+    <div *ngIf="account !== null && !babyProfile.name">
+      <h1 class="display-5 d-none d-sm-block">
+        <span jhiTranslate="home.titleWithName" [translateValues]="{ username: account.firstName ?? account.login }"
+          >Welcome, Java Hipster!</span
+        >
+      </h1>
+      <h5 class="d-sm-none">
+        <span jhiTranslate="home.titleWithName" [translateValues]="{ username: account.firstName ?? account.login }"
+          >Welcome, Java Hipster!</span
+        >
+      </h5>
+    </div>
 
     <jhi-alert-error></jhi-alert-error>
 
@@ -34,7 +44,7 @@
           </div>
         </div>
         <div [hidden]="!babyProfile.name">
-          <div class="row mt-4">
+          <div class="row">
             <div class="col-12 text-left">
               <a [routerLink]="['/baby-profile', babyProfile.id, 'edit']" class="btn btn-primary m-0 mb-1 text-white">
                 <fa-icon icon="edit"></fa-icon>
