Define col-md-8 col-sm-12 for every view and update screen

--- a/src/main/webapp/app/entities/baby/humor/detail/humor-detail.component.html
+++ b/src/main/webapp/app/entities/baby/humor/detail/humor-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="humor">
       <h2 data-cy="humorDetailsHeading"><span jhiTranslate="gatewayApp.babyHumor.detail.title">Humor</span></h2>
 
