--- a/src/main/webapp/app/entities/baby/nap/detail/nap-detail.component.html
+++ b/src/main/webapp/app/entities/baby/nap/detail/nap-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="nap">
       <h2 data-cy="napDetailsHeading"><span jhiTranslate="gatewayApp.babyNap.detail.title">Nap</span></h2>
 
