--- a/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
+++ b/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="user">
       <h2>
         <span jhiTranslate="userManagement.detail.title">User</span> [<strong>{{ user.login }}</strong
