--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="babyProfile">
       <h2 data-cy="babyProfileDetailsHeading"><span jhiTranslate="gatewayApp.babyBabyProfile.detail.title">Baby Profile</span></h2>
 
