--- a/src/main/webapp/app/entities/baby/breast-feed/detail/breast-feed-detail.component.html
+++ b/src/main/webapp/app/entities/baby/breast-feed/detail/breast-feed-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="breastFeed">
       <h2 data-cy="breastFeedDetailsHeading"><span jhiTranslate="gatewayApp.babyBreastFeed.detail.title">Breast Feed</span></h2>
 
