--- a/src/main/webapp/app/entities/baby/height/detail/height-detail.component.html
+++ b/src/main/webapp/app/entities/baby/height/detail/height-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="height">
       <h2 data-cy="heightDetailsHeading"><span jhiTranslate="gatewayApp.babyHeight.detail.title">Height</span></h2>
 
