--- a/src/main/webapp/app/entities/baby/humor-history/detail/humor-history-detail.component.html
+++ b/src/main/webapp/app/entities/baby/humor-history/detail/humor-history-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="humorHistory">
       <h2 data-cy="humorHistoryDetailsHeading"><span jhiTranslate="gatewayApp.babyHumorHistory.detail.title">Humor History</span></h2>
 
