--- a/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
+++ b/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
       <h2
         id="jhi-humor-history-heading"
