--- a/src/main/webapp/app/entities/baby/nap/update/nap-update.component.html
+++ b/src/main/webapp/app/entities/baby/nap/update/nap-update.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
       <h2 id="jhi-nap-heading" data-cy="NapCreateUpdateHeading" jhiTranslate="gatewayApp.babyNap.home.createOrEditLabel">
         Create or edit a Nap
