--- a/src/main/webapp/app/entities/baby/weight/detail/weight-detail.component.html
+++ b/src/main/webapp/app/entities/baby/weight/detail/weight-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-8 col-sm-12">
     <div *ngIf="weight">
       <h2 data-cy="weightDetailsHeading"><span jhiTranslate="gatewayApp.babyWeight.detail.title">Weight</span></h2>
 
