Replace humor description for emoji fontawesome icons that represent each humor value

--- a/src/main/webapp/app/entities/baby/nap/detail/nap-detail.component.html
+++ b/src/main/webapp/app/entities/baby/nap/detail/nap-detail.component.html
@@ -32,10 +32,16 @@
             <a [routerLink]="['/baby-profile', nap.babyProfile?.id, 'view']">{{ nap.babyProfile?.name }}</a>
           </div>
         </dd>
-        <dt><span jhiTranslate="gatewayApp.babyNap.humor">Humor</span></dt>
+        <dt class="align-self-center"><span jhiTranslate="gatewayApp.babyNap.humor">Humor</span></dt>
         <dd>
           <div *ngIf="nap.humor">
-            <a [routerLink]="['/humor', nap.humor?.id, 'view']">{{ nap.humor?.description }}</a>
+            <div [ngSwitch]="nap.humor?.value">
+              <fa-icon *ngSwitchCase="1" icon="angry" class="emoji angry select"></fa-icon>
+              <fa-icon *ngSwitchCase="2" icon="frown" class="emoji frown select"></fa-icon>
+              <fa-icon *ngSwitchCase="3" icon="meh" class="emoji meh select"></fa-icon>
+              <fa-icon *ngSwitchCase="4" icon="smile" class="emoji smile select"></fa-icon>
+              <fa-icon *ngSwitchCase="5" icon="laugh" class="emoji laugh select"></fa-icon>
+            </div>
           </div>
         </dd>
       </dl>
