--- a/src/main/webapp/app/entities/baby/nap/list/nap.component.html
+++ b/src/main/webapp/app/entities/baby/nap/list/nap.component.html
@@ -67,7 +67,13 @@
           </td>
           <td>
             <div *ngIf="!nap.humor?.emotico">
-              <a [routerLink]="['/humor', nap.humor?.id, 'view']">{{ nap.humor?.description }}</a>
+              <div [ngSwitch]="nap.humor?.value">
+                <fa-icon *ngSwitchCase="1" icon="angry" class="emoji angry select"></fa-icon>
+                <fa-icon *ngSwitchCase="2" icon="frown" class="emoji frown select"></fa-icon>
+                <fa-icon *ngSwitchCase="3" icon="meh" class="emoji meh select"></fa-icon>
+                <fa-icon *ngSwitchCase="4" icon="smile" class="emoji smile select"></fa-icon>
+                <fa-icon *ngSwitchCase="5" icon="laugh" class="emoji laugh select"></fa-icon>
+              </div>
             </div>
             <div *ngIf="nap.humor?.emotico">
               <a [routerLink]="['/humor', nap.humor?.id, 'view']">
