Replace humor description for emoji fontawesome icons that represent each humor value

--- a/src/main/webapp/app/entities/baby/humor-history/detail/humor-history-detail.component.html
+++ b/src/main/webapp/app/entities/baby/humor-history/detail/humor-history-detail.component.html
@@ -24,10 +24,16 @@
             <a [routerLink]="['/baby-profile', humorHistory.babyProfile?.id, 'view']">{{ humorHistory.babyProfile?.name }}</a>
           </div>
         </dd>
-        <dt><span jhiTranslate="gatewayApp.babyHumorHistory.humor">Humor</span></dt>
+        <dt class="align-self-center"><span jhiTranslate="gatewayApp.babyHumorHistory.humor">Humor</span></dt>
         <dd>
           <div *ngIf="humorHistory.humor">
-            <a [routerLink]="['/humor', humorHistory.humor?.id, 'view']">{{ humorHistory.humor?.description }}</a>
+            <div [ngSwitch]="humorHistory.humor?.value">
+              <fa-icon *ngSwitchCase="1" icon="angry" class="emoji angry select"></fa-icon>
+              <fa-icon *ngSwitchCase="2" icon="frown" class="emoji frown select"></fa-icon>
+              <fa-icon *ngSwitchCase="3" icon="meh" class="emoji meh select"></fa-icon>
+              <fa-icon *ngSwitchCase="4" icon="smile" class="emoji smile select"></fa-icon>
+              <fa-icon *ngSwitchCase="5" icon="laugh" class="emoji laugh select"></fa-icon>
+            </div>
           </div>
         </dd>
       </dl>
