--- a/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
+++ b/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
@@ -50,16 +50,53 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" jhiTranslate="gatewayApp.babyHumorHistory.humor" for="field_humor">Humor</label>
-          <select class="form-control" id="field_humor" data-cy="humor" name="humor" formControlName="humor">
-            <option [ngValue]="null"></option>
-            <option
-              [ngValue]="humorOption.id === editForm.get('humor')!.value?.id ? editForm.get('humor')!.value : humorOption"
-              *ngFor="let humorOption of humorsSharedCollection; trackBy: trackHumorById"
-            >
-              {{ humorOption.description }}
-            </option>
-          </select>
+          <label class="form-control-label d-block" jhiTranslate="gatewayApp.babyHumorHistory.humor" for="field_humor">Humor</label>
+          <div class="d-inline" *ngFor="let humorOption of humorsSharedCollection; trackBy: trackHumorById">
+            <input
+              id="humor_{{ humorOption.id }}"
+              type="radio"
+              formControlName="humor"
+              data-cy="humor"
+              name="humor"
+              [value]="humorOption"
+              [checked]="humorOption.id === editForm.get('humor')!.value?.id"
+              class="d-none"
+            />
+            <label for="humor_{{ humorOption.id }}">
+              <div [ngSwitch]="humorOption.value">
+                <fa-icon
+                  *ngSwitchCase="1"
+                  icon="angry"
+                  class="emoji angry"
+                  [ngClass]="humorOption.id === editForm.get('humor')!.value?.id ? 'select' : ''"
+                ></fa-icon>
+                <fa-icon
+                  *ngSwitchCase="2"
+                  icon="frown"
+                  class="emoji frown"
+                  [ngClass]="humorOption.id === editForm.get('humor')!.value?.id ? 'select' : ''"
+                ></fa-icon>
+                <fa-icon
+                  *ngSwitchCase="3"
+                  icon="meh"
+                  class="emoji meh"
+                  [ngClass]="humorOption.id === editForm.get('humor')!.value?.id ? 'select' : ''"
+                ></fa-icon>
+                <fa-icon
+                  *ngSwitchCase="4"
+                  icon="smile"
+                  class="emoji smile"
+                  [ngClass]="humorOption.id === editForm.get('humor')!.value?.id ? 'select' : ''"
+                ></fa-icon>
+                <fa-icon
+                  *ngSwitchCase="5"
+                  icon="laugh"
+                  class="emoji laugh"
+                  [ngClass]="humorOption.id === editForm.get('humor')!.value?.id ? 'select' : ''"
+                ></fa-icon>
+              </div>
+            </label>
+          </div>
         </div>
       </div>
 
