--- a/src/main/webapp/app/entities/baby/baby-profile/update/baby-profile-update.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/update/baby-profile-update.component.html
@@ -27,7 +27,7 @@
           </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
           <label class="form-control-label" jhiTranslate="gatewayApp.babyBabyProfile.picture" for="field_picture">Picture</label>
           <div>
             <img
