--- a/src/main/webapp/app/entities/baby/baby-profile/list/baby-profile.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/list/baby-profile.component.html
@@ -36,7 +36,7 @@
           <th scope="col" jhiSortBy="name">
             <span jhiTranslate="gatewayApp.babyBabyProfile.name">Name</span> <fa-icon icon="sort"></fa-icon>
           </th>
-          <th scope="col" jhiSortBy="picture">
+          <th scope="col" jhiSortBy="picture" *jhiHasAnyAuthority="'ROLE_ADMIN'">
             <span jhiTranslate="gatewayApp.babyBabyProfile.picture">Picture</span> <fa-icon icon="sort"></fa-icon>
           </th>
           <th scope="col" jhiSortBy="birthday">
@@ -56,11 +56,11 @@
       </thead>
       <tbody>
         <tr *ngFor="let babyProfile of babyProfiles; trackBy: trackId" data-cy="entityTable">
-          <td>
+          <td class="align-middle">
             <a [routerLink]="['/baby-profile', babyProfile.id, 'view']">{{ babyProfile.id }}</a>
           </td>
-          <td>{{ babyProfile.name }}</td>
-          <td>
+          <td class="align-middle">{{ babyProfile.name }}</td>
+          <td class="align-middle" *jhiHasAnyAuthority="'ROLE_ADMIN'">
             <a *ngIf="babyProfile.picture" (click)="openFile(babyProfile.picture, babyProfile.pictureContentType)">
               <img
                 [src]="'data:' + babyProfile.pictureContentType + ';base64,' + babyProfile.picture"
@@ -70,9 +70,9 @@
             </a>
             <span *ngIf="babyProfile.picture">{{ babyProfile.pictureContentType }}, {{ byteSize(babyProfile.picture) }}</span>
           </td>
-          <td>{{ babyProfile.birthday | formatMediumDatetime }}</td>
-          <td>{{ babyProfile.sign }}</td>
-          <td>
+          <td class="align-middle">{{ babyProfile.birthday | formatMediumDatetime }}</td>
+          <td class="align-middle">{{ babyProfile.sign }}</td>
+          <td class="align-middle">
             <fa-icon
               [icon]="babyProfile.main ? 'check' : 'window-minimize'"
               aria-hidden="true"
@@ -80,7 +80,7 @@
             ></fa-icon>
           </td>
           <td *jhiHasAnyAuthority="'ROLE_ADMIN'">{{ babyProfile.userId }}</td>
-          <td class="text-right">
+          <td class="text-right align-middle">
             <div class="btn-group">
               <button
                 type="submit"
