Add Bed to Place

--- a/src/main/webapp/app/entities/baby/nap/update/nap-update.component.html
+++ b/src/main/webapp/app/entities/baby/nap/update/nap-update.component.html
@@ -54,6 +54,7 @@
             <option value="BABY_CRIB">{{ 'gatewayApp.Place.BABY_CRIB' | translate }}</option>
             <option value="CART">{{ 'gatewayApp.Place.CART' | translate }}</option>
             <option value="BABY_CONFORT">{{ 'gatewayApp.Place.BABY_CONFORT' | translate }}</option>
+            <option value="BED">{{ 'gatewayApp.Place.BED' | translate }}</option>
           </select>
         </div>
 
